--- a/src/aspnetcore-aad/Views/Shared/_Layout.cshtml
+++ b/src/aspnetcore-aad/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - .NET 5 on AKS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - .NET 5 on AKS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> | Version: <AssemblyVersion />
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
