--- a/src/aspnetcore-aad/Views/_ViewImports.cshtml
+++ b/src/aspnetcore-aad/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using aspnetcore_aad
 @using aspnetcore_aad.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, aspnetcore-aad
