--- a/src/aspnetcore-aad/Views/Home/Index.cshtml
+++ b/src/aspnetcore-aad/Views/Home/Index.cshtml
@@ -1,12 +1,74 @@
-﻿@{
+﻿@using System.Runtime.InteropServices
+@model IndexViewModel
+@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>This page is served from the cluster: <b>@ViewData["AKSClusterInfo"]</b></p>
+    <p>This page is served from the host: <b>@Model.HostName</b></p>
     <p></p>
     <a asp-action="GetSecretFromKV">Get Secret from Key Vault</a> | <a asp-controller="TodoItems" asp-action="Index">Todo Items</a>
     <p></p>
-    <p>@ViewData["KVSecret"]</p>
+    <!--<p>@ViewData["KVSecret"]</p>-->
+    <p>@Model.KVSecret</p>
+</div>
+
+<div class="container">
+    <table class="table table-striped table-hover">
+        <tr>
+            <td class="text-right">.NET Version</td>
+            <td class="text-left">@RuntimeInformation.FrameworkDescription</td>
+        </tr>
+        <tr>
+            <td class="text-right">Operating System</td>
+            <td class="text-left">@RuntimeInformation.OSDescription</td>
+        </tr>
+        <tr>
+            <td class="text-right">Processor architecture</td>
+            <td class="text-left">@RuntimeInformation.OSArchitecture</td>
+        </tr>
+        <tr>
+            <td class="text-right">CPU Cores</td>
+            <td class="text-left">@Environment.ProcessorCount</td>
+        </tr>
+        <tr>
+            <td class="text-right">Containerized</td>
+            <td class="text-left">@(Environment.GetEnvironmentVariable("DOTNET_RUNNING_IN_CONTAINER") is null ? "false" : "true")</td>
+        </tr>
+        <tr>
+            <td class="text-right">Total Available GC Memory</td>
+            <td class="text-left">@Model.TotalAvailableMemory</td>
+        </tr>
+        @if (Model.cGroup)
+        {
+            <tr>
+                <td class="text-right">cgroup CPU Usage</td>
+                <td class="text-left">@Model.CpuUsage</td>
+            </tr>
+            <tr>
+                <td class="text-right">cgroup Memory Usage</td>
+                <td class="text-left">@Model.MemoryUsage</td>
+            </tr>
+            <tr>
+                <td class="text-right">cgroup Memory Limit</td>
+                <td class="text-left">@Model.MemoryLimit</td>
+            </tr>
+        }
+        @if (Model.IpList != null)
+        {
+            <tr>
+                <td class="align-middle text-right">Server IP Address</td>
+                <td class="text-left">
+                    @{
+                        foreach (var ip in Model.IpList)
+                        {
+                            @ip
+                            <br />
+                        }
+                    }
+                </td>
+            </tr>
+        }
+    </table>
 </div>
