--- a/src/aspnetcore-aad/Views/Home/Index.cshtml
+++ b/src/aspnetcore-aad/Views/Home/Index.cshtml
@@ -17,48 +17,52 @@
 <div class="container">
     <table class="table table-striped table-hover">
         <tr>
-            <td class="text-right">.NET Version</td>
+            <td class="text-right font-weight-bold">.NET Version</td>
             <td class="text-left">@RuntimeInformation.FrameworkDescription</td>
         </tr>
         <tr>
-            <td class="text-right">Operating System</td>
+            <td class="text-right font-weight-bold">Operating System</td>
             <td class="text-left">@RuntimeInformation.OSDescription</td>
         </tr>
         <tr>
-            <td class="text-right">Processor architecture</td>
+            <td class="text-right font-weight-bold">Processor architecture</td>
             <td class="text-left">@RuntimeInformation.OSArchitecture</td>
         </tr>
         <tr>
-            <td class="text-right">CPU Cores</td>
+            <td class="text-right font-weight-bold">CPU Cores</td>
             <td class="text-left">@Environment.ProcessorCount</td>
         </tr>
         <tr>
-            <td class="text-right">Containerized</td>
+            <td class="text-right font-weight-bold">Containerized</td>
             <td class="text-left">@(Environment.GetEnvironmentVariable("DOTNET_RUNNING_IN_CONTAINER") is null ? "false" : "true")</td>
         </tr>
         <tr>
-            <td class="text-right">Total Available GC Memory</td>
+            <td class="text-right font-weight-bold">Total Available GC Memory</td>
             <td class="text-left">@Model.TotalAvailableMemory</td>
         </tr>
         @if (Model.cGroup)
         {
             <tr>
-                <td class="text-right">cgroup CPU Usage</td>
-                <td class="text-left">@Model.CpuUsage</td>
+                <td class="text-right font-weight-bold">cgroup CPU Shares</td>
+                <td class="text-left">@Model.CpuShares</td>
             </tr>
             <tr>
-                <td class="text-right">cgroup Memory Usage</td>
+                <td class="text-right font-weight-bold">cgroup CPU Limit</td>
+                <td class="text-left">@Model.CpuLimit</td>
+            </tr>
+            <tr>
+                <td class="text-right font-weight-bold">cgroup Memory Usage</td>
                 <td class="text-left">@Model.MemoryUsage</td>
             </tr>
             <tr>
-                <td class="text-right">cgroup Memory Limit</td>
+                <td class="text-right font-weight-bold">cgroup Memory Limit</td>
                 <td class="text-left">@Model.MemoryLimit</td>
             </tr>
         }
         @if (Model.IpList != null)
         {
             <tr>
-                <td class="align-middle text-right">Server IP Address</td>
+                <td class="align-middle text-right font-weight-bold">Server IP Address</td>
                 <td class="text-left">
                     @{
                         foreach (var ip in Model.IpList)
