--- a/src/aspnetcore-aad/Views/Shared/_Layout.cshtml
+++ b/src/aspnetcore-aad/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - .NET 5 on AKS</title>
+    <title>@ViewData["Title"] - .NET on AKS</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -16,7 +16,7 @@
             <div class="container">
                 <div style="margin-right: 50px;">
                     <a class="navbar-brand" style="margin-right: 3px;" asp-area="" asp-controller="Home" asp-action="Index">
-                        .NET 5 on AKS
+                        .NET on AKS
                     </a>
                     <span class="position-absolute top-0 start-0 translate-middle badge border border-info text-uppercase" style="font-weight: 400">
                         @Configuration["HostingEnv"]
@@ -48,7 +48,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2021 - .NET 5 on AKS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> | Version: <AssemblyVersion />
+            &copy; 2023 - .NET on AKS - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a> | Version: <AssemblyVersion />
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
